cluster/overlays/local/namespace.yaml
apiVersion: v1
kind: Namespace

metadata:
  name: local
  labels: 
    istio-injection: enabled
